derive-ex-tests/tests/compile_fail/derive_default/no_default_attr.rs
use derive_ex::derive_ex;

#[derive_ex(Default)]
enum X {
    A,
    B,
}
fn main() {}
